Add: traducciones para el footer + tooltip

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -14,5 +14,9 @@
     "frontEnd": "Front-End Development",
     "dataBase": "Database",
     "versionControl": "Version Control"
+  },
+
+  "footer": {
+    "template": "Template made by"
   }
 }
