--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -15,5 +15,8 @@
     "frontEnd": "Desarrollo Front-End",
     "dataBase": "Base de datos",
     "versionControl": "Control de verisones"
+  },
+  "footer": {
+    "template": "Template hecho por"
   }
 }
