Add: Traducciones al cv

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -28,6 +28,9 @@
       "tablet": "Tablet"
     }
   },
+  "cv":{
+    "section":"Curriculum Vitae"
+  },
   "footer": {
     "template": "Template made by"
   }
