Add: Traducciones para experience page

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -31,6 +31,9 @@
   "cv":{
     "section":"Curriculum Vitae"
   },
+  "workExperience": {
+    "section": "Work Experience"
+  },
   "footer": {
     "template": "Template made by"
   }
