--- a/src/translations/pt/global.json
+++ b/src/translations/pt/global.json
@@ -31,6 +31,9 @@
   "cv":{
     "section":"Currículo"
   },
+  "workExperience": {
+    "section": "Experiência Profissional"
+  },
   "footer": {
     "template": "Template feito por"
   }
