--- a/src/translations/en/profile.json
+++ b/src/translations/en/profile.json
@@ -1,5 +1,6 @@
 {
   "fullname": "Leandro Daniel Schugurensky",
+  "descript": "",
   "dev": "Front-end Developer",
   "years": "23 years",
   "nationality": "Argentina",
