--- a/src/translations/es/profile.json
+++ b/src/translations/es/profile.json
@@ -1,5 +1,6 @@
 {
   "fullname": "Leandro Daniel Schugurensky",
+  "descript": "",
   "dev": "Desarollador Front-end",
   "years": "23 años",
   "nationality": "Argentina",
@@ -12,7 +13,7 @@
     "CV": "/profile/CV.pdf"
   },
   "skills": {
-    "frontEnd": ["HTML", "CSS", "JavaScript", "React", "Next.js", "Tailwind"],
+    "frontEnd": ["HTML", "CSS", "JavaScript", "TypeScript", "React", "Next.js", "Tailwind"],
     "dataBase": ["MongoDB", "Firebase"],
     "versionControl": ["Git", "GitHub"]
   },
