--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -1,5 +1,6 @@
 {
   "fullname": "Leandro Daniel Schugurensky",
+  "descript": "",
   "dev": "Desenvolvedor Front-end",
   "years": "23 anos",
   "nationality": "Argentina",
