Reapply "fix translates"
This reverts commit 188cd74a65392c54019588dde7f00780c5705f12.

--- a/src/translations/pt/global.json
+++ b/src/translations/pt/global.json
@@ -12,7 +12,7 @@
     "section": "Apresentação",
     "skills": "Habilidades",
     "frontEnd": "Desenvolvimento Front-End",
-    "dataBase": "Banco de dados",
+    "dataBase": "Base de Dados",
     "versionControl": "Controle de versões"
   },
   "projects": {
@@ -24,7 +24,7 @@
     "screenshots": "Capturas de tela",
     "device": {
       "desktop": "PC",
-      "cellphone": "Celular",
+      "cellphone": "Móvei",
       "tablet": "Tablet"
     }
   },
@@ -50,7 +50,7 @@
     "sending": "Enviando...",
     "sent": "Enviado com sucesso.",
     "titleText": "Entre em Contato para me Contratar!",
-    "text": "Você está procurando alguém com habilidades e experiência para um novo projeto ou posição? Estou disponível para novas oportunidades e ficaria feliz em ouvir sobre sua proposta. Se você acha que meu perfil se encaixa no que você precisa, sinta-se à vontade para entrar em contato. Por favor, preencha o formulário abaixo, e entrarei em contato o mais breve possível."
+    "text": "Você está procurando alguém com habilidades e experiência para um novo projeto ou posição? Estou disponível para novas oportunidades e ficaria feliz em ouvir sobre sua proposta. Se você acha que meu perfil se encaixa no que você precisa, sinta-se à vontade para entrar em contato. Por favor, preencha o formulário abaixo e entrarei em contato o mais breve possível."
   },
   "footer": {
     "template": "Template feito por"
