--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -21,16 +21,16 @@
   "workExperience": [
     {
       "title": "Administrativo",
-      "company": "Subsecretaria da Família da Prefeitura da Cidade de Corrientes",
+      "company": "Subsecretaría da Família da Prefeitura da Cidade de Corrientes",
       "date": "Nov. 2023 - Jun. 2024 · 8 meses",
-      "description": "Estágio (8 meses) no programa E.T.P (Entrenamiento Para el Trabajo Público). Tarefas administrativas: carregamento e digitalização de processos, entrada de dados no banco, entre outras.",
+      "description": "Estágio (8 meses) no programa T.T.P (Treinamento para o Trabalho Público). Atividades administrativas: digitalização e carregamento de processos, entrada de dados na base, entre outras.",
       "linkDescription": ""
     },
     {
       "title": "Administrativo",
       "company": "Direção Geral de Deficiência e Inclusão Social da Prefeitura da Cidade de Corrientes",
       "date": "Jun. 2022 - Jan. 2023 · 8 meses",
-      "description": "Tarefas administrativas: carregamento e digitalização de processos, entrada de dados no banco, entre outras.",
+      "description": "Funções administrativas: digitalização e carregamento, entrada de dados no banco, entre outras.",
       "linkDescription": ""
     }
   ],
