Add: Sección de pasatiempos con traducción

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -13,7 +13,8 @@
     "skills": "Skills",
     "frontEnd": "Front-End Development",
     "dataBase": "Database",
-    "versionControl": "Version Control"
+    "versionControl": "Version Control",
+    "hobbies": "Hobbies"
   },
   "projects": {
     "section": "Projects",
