--- a/src/translations/en/profile.json
+++ b/src/translations/en/profile.json
@@ -1,6 +1,7 @@
 {
   "fullname": "Leandro Daniel Schugurensky",
   "descript": "",
+  "hobbies": "",
   "dev": "Front-end Developer",
   "years": "23 years",
   "nationality": "Argentina",
