--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -13,7 +13,8 @@
     "skills": "Habilidades",
     "frontEnd": "Desarrollo Front-End",
     "dataBase": "Base de datos",
-    "versionControl": "Control de verisones"
+    "versionControl": "Control de verisones",
+    "hobbies": "Pasatiempos"
   },
   "projects": {
     "section": "Proyectos",
