--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -1,6 +1,7 @@
 {
   "fullname": "Leandro Daniel Schugurensky",
   "descript": "",
+  "hobbies": "",
   "dev": "Desenvolvedor Front-end",
   "years": "23 anos",
   "nationality": "Argentina",
