--- a/src/translations/es/profile.json
+++ b/src/translations/es/profile.json
@@ -38,6 +38,9 @@
       "title": "Administrativo",
       "company": "Subsecretaria de la Familia de la Municipalidad de la Ciudad de Corrientes",
       "date": "Nov. 2023 - Jun. 2024 · 8 meses",
+      "modality": "Presencial",
+      "workplace": "Corrientes, Argentina",
+      "country": "Argentina",
       "description": "Pasantía laboral (8 meses) en el marco del programa E.T.P (Entrenamiento Para el Trabajo Público). Desempeño de tareas administrativas: carga y digitalización de expedientes, carga de base de datos, entre otras.",
       "linkDescription": ""
     },
@@ -45,6 +48,9 @@
       "title": "Administrativo",
       "company": "Dirección General de Discapacidad e Inclusión Social de la Municipalidad de la Ciudad de Corrientes",
       "date": "Jun. 2022 - Ene. 2023 · 8 meses",
+      "modality": "Presencial",
+      "workplace": "Corrientes, Argentina",
+      "country": "Argentina",
       "description": "Desempeño de tareas administrativas: carga y digitalización de expedientes, carga de base de datos, entre otras.",
       "linkDescription": ""
     }
