--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -24,6 +24,9 @@
       "title": "Administrativo",
       "company": "Subsecretaría da Família da Prefeitura da Cidade de Corrientes",
       "date": "Nov. 2023 - Jun. 2024 · 8 meses",
+      "modality": "Presencial",
+      "workplace": "Corrientes, Argentina",
+      "country": "Argentina",
       "description": "Estágio (8 meses) no programa T.T.P (Treinamento para o Trabalho Público). Atividades administrativas: digitalização e carregamento de processos, entrada de dados na base, entre outras.",
       "linkDescription": ""
     },
@@ -31,6 +34,9 @@
       "title": "Administrativo",
       "company": "Direção Geral de Deficiência e Inclusão Social da Prefeitura da Cidade de Corrientes",
       "date": "Jun. 2022 - Jan. 2023 · 8 meses",
+      "modality": "Presencial",
+      "workplace": "Corrientes, Argentina",
+      "country": "Argentina",
       "description": "Funções administrativas: digitalização e carregamento, entrada de dados no banco, entre outras.",
       "linkDescription": ""
     }
