--- a/src/translations/en/profile.json
+++ b/src/translations/en/profile.json
@@ -40,7 +40,7 @@
       "modality": "In-person",
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
-      "description": "Work placement (8 months) under the E.T.P (Work Training Program). Administrative tasks: loading and digitization of records, database entry, among others.",
+      "description": ["Work placement (8 months) under the E.T.P (Work Training Program). Administrative tasks: loading and digitization of records, database entry, among others."],
       "linkDescription": ""
     },
     {
@@ -50,7 +50,7 @@
       "modality": "In-person",
       "workplace": "Corrientes, Argentina",
       "country": "Peru",
-      "description": "Administrative tasks: loading and digitization of records, database entry, among others.",
+      "description": ["Administrative tasks: loading and digitization of records, database entry, among others."],
       "linkDescription": ""
     }
   ],
