--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -27,7 +27,7 @@
       "modality": "Presencial",
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
-      "description": "Estágio (8 meses) no programa T.T.P (Treinamento para o Trabalho Público). Atividades administrativas: digitalização e carregamento de processos, entrada de dados na base, entre outras.",
+      "description": ["Estágio (8 meses) no programa T.T.P (Treinamento para o Trabalho Público). Atividades administrativas: digitalização e carregamento de processos, entrada de dados na base, entre outras."],
       "linkDescription": ""
     },
     {
@@ -37,7 +37,7 @@
       "modality": "Presencial",
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
-      "description": "Funções administrativas: digitalização e carregamento, entrada de dados no banco, entre outras.",
+      "description": ["Funções administrativas: digitalização e carregamento, entrada de dados no banco, entre outras."],
       "linkDescription": ""
     }
   ],
