Add: Apartado de tasks para la exp laboral

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -33,7 +33,9 @@
     "section":"Curriculum Vitae"
   },
   "workExperience": {
-    "section": "Work Experience"
+    "section": "Work Experience",
+    "showMore": "View more",
+    "tasks": "Tasks"
   },
   "education": {
     "section": "Diplomas and Certificates"
