--- a/src/translations/en/profile.json
+++ b/src/translations/en/profile.json
@@ -41,6 +41,7 @@
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
       "description": ["Work placement (8 months) under the E.T.P (Work Training Program). Administrative tasks: loading and digitization of records, database entry, among others."],
+      "tasks": "",
       "linkDescription": ""
     },
     {
@@ -51,6 +52,7 @@
       "workplace": "Corrientes, Argentina",
       "country": "Peru",
       "description": ["Administrative tasks: loading and digitization of records, database entry, among others."],
+      "tasks": "",
       "linkDescription": ""
     }
   ],
