--- a/src/translations/es/profile.json
+++ b/src/translations/es/profile.json
@@ -42,6 +42,7 @@
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
       "description": ["Pasantía laboral (8 meses) en el marco del programa E.T.P (Entrenamiento Para el Trabajo Público). Desempeño de tareas administrativas: carga y digitalización de expedientes, carga de base de datos, entre otras."],
+      "tasks": "",
       "linkDescription": ""
     },
     {
@@ -52,6 +53,7 @@
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
       "description": ["Desempeño de tareas administrativas: carga y digitalización de expedientes, carga de base de datos, entre otras."],
+      "tasks": "",
       "linkDescription": ""
     }
   ],
