--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -28,6 +28,7 @@
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
       "description": ["Estágio (8 meses) no programa T.T.P (Treinamento para o Trabalho Público). Atividades administrativas: digitalização e carregamento de processos, entrada de dados na base, entre outras."],
+      "tasks": "",
       "linkDescription": ""
     },
     {
@@ -38,6 +39,7 @@
       "workplace": "Corrientes, Argentina",
       "country": "Argentina",
       "description": ["Funções administrativas: digitalização e carregamento, entrada de dados no banco, entre outras."],
+      "tasks": "",
       "linkDescription": ""
     }
   ],
