Add: Componente Loading y NotFound, y errores

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -27,7 +27,8 @@
       "desktop": "Desktop",
       "cellphone": "Mobile",
       "tablet": "Tablet"
-    }
+    },
+    "projectNotFound" : "Project not found."
   },
   "cv":{
     "section":"Curriculum Vitae"
