Add: Loading y NotFound traducidos

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -28,7 +28,8 @@
       "cellphone": "Mobile",
       "tablet": "Tablet"
     },
-    "projectNotFound" : "Project not found."
+    "projectNotFound" : "Project not found.",
+    "projectLoading" : "Loading..."
   },
   "cv":{
     "section":"Curriculum Vitae"
