Refactor: Array de párrafos para el ContactPage

--- a/src/translations/en/profile.json
+++ b/src/translations/en/profile.json
@@ -70,5 +70,8 @@
     "https://www.udemy.com/certificate/UC-0093498b-eb62-4522-95e5-847afcf2d80c/",
     "https://www.udemy.com/certificate/UC-294ca089-e6e2-4c1a-86e5-57a1f7e01f69/",
     "https://www.udemy.com/certificate/UC-4ca8e86d-e5e7-4696-be4b-aa738bc426fd/"
+  ],
+  "textContact": [
+    "Are you looking for someone with skills and experience for a new project or position? I'm available for new opportunities and would love to hear about your proposal. If you think my profile fits what you need, feel free to get in touch. Please fill out the form below, and I'll get back to you as soon as possible."
   ]
 }
