--- a/src/translations/es/profile.json
+++ b/src/translations/es/profile.json
@@ -71,5 +71,8 @@
     "https://www.udemy.com/certificate/UC-0093498b-eb62-4522-95e5-847afcf2d80c/",
     "https://www.udemy.com/certificate/UC-294ca089-e6e2-4c1a-86e5-57a1f7e01f69/",
     "https://www.udemy.com/certificate/UC-4ca8e86d-e5e7-4696-be4b-aa738bc426fd/"
+  ],
+  "textContact": [ 
+    "¿Estás buscando a alguien con habilidades y experiencia para un nuevo proyecto o puesto? Estoy disponible para nuevas oportunidades y estaría encantado de escuchar sobre tu propuesta. Si crees que mi perfil encaja con lo que necesitas, no dudes en ponerte en contacto conmigo. Por favor, completa el siguiente formulario y me pondré en contacto contigo lo antes posible."
   ]
 }
