--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -70,5 +70,8 @@
     "https://www.udemy.com/certificate/UC-0093498b-eb62-4522-95e5-847afcf2d80c/",
     "https://www.udemy.com/certificate/UC-294ca089-e6e2-4c1a-86e5-57a1f7e01f69/",
     "https://www.udemy.com/certificate/UC-4ca8e86d-e5e7-4696-be4b-aa738bc426fd/"
+  ],
+  "textContact": [
+    "Você está procurando alguém com habilidades e experiência para um novo projeto ou posição? Estou disponível para novas oportunidades e ficaria feliz em ouvir sobre sua proposta. Se você acha que meu perfil se encaixa no que você precisa, sinta-se à vontade para entrar em contato. Por favor, preencha o formulário abaixo e entrarei em contato o mais breve possível."
   ]
 }
